Rename project from "UofL Expense Tracker" to "Red Budget" and update related files. Added delete functionality in AddExpenseModal and enhanced Dashboard with search, filter, and sorting features for better expense management.

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "expense-tracker-backend",
+  "name": "red-budget-backend",
   "version": "1.0.0",
-  "description": "Backend API for UofL Expense Tracker",
+  "description": "Backend API for Red Budget",
   "main": "server.js",
   "type": "module",
   "scripts": {
